turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:8: error: ':' expected but ')' found.
def setCouleurSol(Black) {
                       ^LangtonsAnt:11: error: identifier expected but '}' found.
}
^