turmites.lessons.turmites.langton.Langton.scala.code
def step() 
{

if (getCouleurSol()==Color.white){
avance();
droite();	
				  }	 
def setCouleurSol(Black) {

}
}
